--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
         <div class="game">
             <div id="pole_14x14"></div>
             <div id="Ser_Peshk_1"></div>
+            <div id="Ser_Peshk_2"></div>
+            <div id="Ser_Peshk_3"></div>
+            <div id="Ser_Peshk_4"></div>
+            <div id="Ser_Peshk_5"></div>
+            <div id="Ser_Peshk_6"></div>
+            <div id="Ser_Peshk_7"></div>
+            <div id="Ser_Peshk_8"></div>
+            <div id="Ser_Ferz"></div>
+            <div id="Ser_Lad_1"></div>
+            <div id="Ser_Lad_2"></div>
+            <div id="Ser_Kon_1"></div>
+            <div id="Ser_Kon_2"></div>
+            <div id="Ser_Slon_1"></div>
+            <div id="Ser_Slon_2"></div>
+            <div id="Ser_Korol"></div>
         </div>
         <script src="script.js"></script>
     </body>
