--- a/index.html
+++ b/index.html
@@ -30,6 +30,54 @@
             <div id="Ser_Slon_1"></div>
             <div id="Ser_Slon_2"></div>
             <div id="Ser_Korol"></div>
+            <div id="Krasn_Peshk_1"></div>
+            <div id="Krasn_Peshk_2"></div>
+            <div id="Krasn_Peshk_3"></div>
+            <div id="Krasn_Peshk_4"></div>
+            <div id="Krasn_Peshk_5"></div>
+            <div id="Krasn_Peshk_6"></div>
+            <div id="Krasn_Peshk_7"></div>
+            <div id="Krasn_Peshk_8"></div>
+            <div id="Krasn_Ferz"></div>
+            <div id="Krasn_Lad_1"></div>
+            <div id="Krasn_Lad_2"></div>
+            <div id="Krasn_Kon_1"></div>
+            <div id="Krasn_Kon_2"></div>
+            <div id="Krasn_Slon_1"></div>
+            <div id="Krasn_Slon_2"></div>
+            <div id="Krasn_Korol"></div>
+            <div id="Zelen_Peshk_1"></div>
+            <div id="Zelen_Peshk_2"></div>
+            <div id="Zelen_Peshk_3"></div>
+            <div id="Zelen_Peshk_4"></div>
+            <div id="Zelen_Peshk_5"></div>
+            <div id="Zelen_Peshk_6"></div>
+            <div id="Zelen_Peshk_7"></div>
+            <div id="Zelen_Peshk_8"></div>
+            <div id="Zelen_Ferz"></div>
+            <div id="Zelen_Lad_1"></div>
+            <div id="Zelen_Lad_2"></div>
+            <div id="Zelen_Kon_1"></div>
+            <div id="Zelen_Kon_2"></div>
+            <div id="Zelen_Slon_1"></div>
+            <div id="Zelen_Slon_2"></div>
+            <div id="Zelen_Korol"></div>
+            <div id="Sin_Peshk_1"></div>
+            <div id="Sin_Peshk_2"></div>
+            <div id="Sin_Peshk_3"></div>
+            <div id="Sin_Peshk_4"></div>
+            <div id="Sin_Peshk_5"></div>
+            <div id="Sin_Peshk_6"></div>
+            <div id="Sin_Peshk_7"></div>
+            <div id="Sin_Peshk_8"></div>
+            <div id="Sin_Ferz"></div>
+            <div id="Sin_Lad_1"></div>
+            <div id="Sin_Lad_2"></div>
+            <div id="Sin_Kon_1"></div>
+            <div id="Sin_Kon_2"></div>
+            <div id="Sin_Slon_1"></div>
+            <div id="Sin_Slon_2"></div>
+            <div id="Sin_Korol"></div>
         </div>
         <script src="script.js"></script>
     </body>
